force-app/main/default/objects/WarehouseTransaction__c/WarehouseTransaction__c.object-meta.xml
<CustomObject>
    <description>Represents any movement of containers</description>
    <label>WarehouseTransaction</label>
    <nameField>
        <displayFormat>WT-{000000}</displayFormat>
        <label>WarehouseTransaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WarehouseTransactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>