force-app/main/default/objects/WarehouseTransaction__c/fields/Cell__c.field-meta.xml
<CustomField>
    <fullName>Cell__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cell</label>
    <referenceTo>Cell__c</referenceTo>
    <relationshipLabel>WarehouseTransactions</relationshipLabel>
    <relationshipName>WarehouseTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>