force-app/main/default/objects/WarehouseTransaction__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container</label>
    <referenceTo>Container__c</referenceTo>
    <relationshipLabel>WarehouseTransactions</relationshipLabel>
    <relationshipName>WarehouseTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>