force-app/main/default/objects/WarehouseTransaction__c/fields/FromLocation__c.field-meta.xml
<CustomField>
    <fullName>FromLocation__c</fullName>
    <label>FromLocation</label>
    <length>6</length>
    <type>Text</type>
</CustomField>