force-app/main/default/objects/WarehouseTransaction__c/fields/ToLocation__c.field-meta.xml
<CustomField>
    <fullName>ToLocation__c</fullName>
    <label>ToLocation</label>
    <length>6</length>
    <type>Text</type>
</CustomField>