force-app/main/default/objects/WarehouseTransaction__c/fields/TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionDate__c</fullName>
    <label>TransactionDate</label>
    <type>DateTime</type>
</CustomField>