force-app/main/default/objects/WarehouseTransaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cell__c</columns>
    <columns>Container__c</columns>
    <columns>FromLocation__c</columns>
    <columns>ToLocation__c</columns>
    <columns>TransactionDate__c</columns>
    <columns>Type__c</columns>
    <columns>Warehouse__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>